<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Warehouse Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_refresh_history">Refresh</string>
    <string name="action_refresh_balance">Refresh</string>
    <string name="action_sort_area">Sort by Area</string>
    <string name="action_sort_quantity">Sort by Quantity</string>
    <string name="action_sort_size">Sort by Size</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about">About</string>
    <string name="checkout">CHECKOUT</string>
    <string name="scan">SCAN</string>
    <string name="manual">MANUAL</string>
    <string name="history">HISTORY</string>
    <string name="balance">BALANCE</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_password">Set password</string>
    <string name="pref_password_summary">Set your password</string>
    <string name="pref_unit_profile">Unit</string>
    <string name="pref_unit">Set unit</string>
    <string name="pref_unit_summary">Choose Unit</string>
    <string name="pref_notification">Notification</string>
    <string name="pref_danger_area">Danger Level Area</string>
    <string name="pref_danger_area_summary">Set danger level (m²)</string>
    <string name="pref_danger_quantity">Danger Level Quantity</string>
    <string name="pref_danger_quantity_summary">Set danger level (pcs)</string>
    <string name="help">Help</string>
    <string name="title_activity_manual">Manual Checkout</string>
    <string name="barcode">Barcode</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="reference">Reference</string>
    <string name="qty">Qty</string>
    <string name="version">Version</string>
    <string name="contact">Contact</string>
    <string name="contact_email">yancyn@gmail.com</string>
</resources>
