<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/pref_user_profile"
        android:icon="@android:drawable/ic_lock_lock">
        <EditTextPreference
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername"/>
        <EditTextPreference
            android:password="true"
            android:title="@string/pref_password"
            android:summary="@string/pref_password_summary"
            android:key="prefPassword"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_unit_profile">
        <ListPreference
            android:title="@string/pref_unit"
            android:summary="@string/pref_unit_summary"
            android:entries="@array/unitOptions"
            android:entryValues="@array/unitValues"
            android:defaultValue="m"
            android:key="prefUnit" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notification">
        <EditTextPreference
            android:title="@string/pref_danger_area"
            android:summary="@string/pref_danger_area_summary"
            android:inputType="number"
            android:key="prefDangerArea" />
        <EditTextPreference
            android:title="@string/pref_danger_quantity"
            android:summary="@string/pref_danger_quantity_summary"
            android:inputType="number"
            android:key="prefDangerQuantity" />
    </PreferenceCategory>

    <Preference
        android:title="Help"
        android:icon="@android:drawable/ic_menu_help">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hlgranite.warehousescanner"
            android:targetClass="com.hlgranite.warehousescanner.AboutActivity" />
    </Preference>

</PreferenceScreen>