<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_refresh_balance"
        android:title="@string/action_refresh_balance"
        android:orderInCategory="10"
        android:showAsAction="never" />
    <item android:id="@+id/action_sort_area"
        android:title="@string/action_sort_area"
        android:orderInCategory="20"
        android:showAsAction="never" />
    <item android:id="@+id/action_sort_quantity"
        android:title="@string/action_sort_quantity"
        android:orderInCategory="21"
        android:showAsAction="never" />
    <item android:id="@+id/action_sort_size"
        android:title="@string/action_sort_size"
        android:orderInCategory="22"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
